# MT-WAE

./: README.md
scripts/: argsParser.py  automataSpeedUp.sh  compareSpeedUp.py  dataLoader.py  getBestResults.py  hyperParameters.py  mt_ae_impl.py  run.py  utils.py
ttk-dev2/: .gitignore  clangFormatting.sh
ttk-dev2/CMake/: Print.cmake  config.cmake  merge_tree_input.xml  merge_tree_planar_layout.xml
ttk-dev2/core/base/assignmentSolver/: AssignmentAuction.h  AssignmentExhaustive.h  AssignmentSinkhorn.h  AssignmentSolver.h
ttk-dev2/core/base/ftmTree/: CMakeLists.txt  FTMTreeUtils.cpp  FTMTree_MT.h
ttk-dev2/core/base/ftmTreePP/: FTMTreePPUtils.h
ttk-dev2/core/base/mergeTreeAutoencoder/: CMakeLists.txt  MergeTreeAutoencoder.cpp  MergeTreeAutoencoder.h  MergeTreeAutoencoderUtils.cpp  MergeTreeAutoencoderUtils.h  TorchUtils.cpp  TorchUtils.h
ttk-dev2/core/base/mergeTreeClustering/: MergeTreeBarycenter.h  MergeTreeBase.h  MergeTreeDistance.h
ttk-dev2/core/base/mergeTreeDistanceMatrix/: MergeTreeDistanceMatrix.h
ttk-dev2/core/base/mergeTreePrincipalGeodesics/: MergeTreeAxesAlgorithmBase.h  MergeTreePrincipalGeodesics.h
ttk-dev2/core/base/metricDistortion/: MetricDistortion.h
ttk-dev2/core/base/planarGraphLayout/: MergeTreeVisualization.h
ttk-dev2/core/vtk/ttkMergeTreeAutoencoder/: CMakeLists.txt  ttk.module  ttkMergeTreeAutoencoder.cpp  ttkMergeTreeAutoencoder.h
ttk-dev2/core/vtk/ttkMergeTreeClustering/: CMakeLists.txt  ttkMergeTreeClustering.cpp  ttkMergeTreeClustering.h
ttk-dev2/core/vtk/ttkMergeTreeDistanceMatrix/: CMakeLists.txt  ttkMergeTreeDistanceMatrix.h
ttk-dev2/paraview/xmls/: MergeTreeAutoencoder.xml
ttk-dev2/standalone/MergeTreePrincipalGeodesics/: CMakeLists.txt  main.cpp
ttk-dev2/standalone/MergeTreePrincipalGeodesicsDecoding/: CMakeLists.txt  main.cpp
ttk-dev2/standalone/MergeTreeTemporalReductionDecoding/: CMakeLists.txt  main.cpp
ttk-dev2/standalone/MergeTreeTemporalReductionEncoding/: CMakeLists.txt  main.cpp
ttk-dev2/standalone/ProjectionFromTable/: CMakeLists.txt  main.cpp
(+11 files in other folders)
